# power_predict

./: .gitignore  README.md  package-lock.json
backend/: README.md
backend/python/inference-service/: README.md  pyproject.toml
backend/python/inference-service/app/: main.py
backend/python/inference-service/app/api/: routes.py
backend/python/inference-service/app/core/: config.py
backend/python/inference-service/app/repositories/: db.py
backend/python/inference-service/app/schemas/: requests.py  responses.py
backend/python/inference-service/app/services/: common.py  job_service.py  query_service.py
backend/python/model-service/: README.md  pyproject.toml
backend/python/model-service/app/: main.py
backend/python/model-service/app/api/: routes.py
backend/python/model-service/app/core/: config.py
backend/python/model-service/app/repositories/: db.py
backend/python/model-service/app/schemas/: common.py  requests.py  responses.py
backend/python/model-service/app/services/: common.py  training_service.py
deploy/: README.md
docs/: 01-system-modules-and-service-boundaries.md  02-database-and-hudi-schema-design.md  03-service-api-contract-design.md  04-project-scaffold-and-deployment-structure.md  05-work-items-and-github-sync.md  06-stage1-scaffold-baseline.md  07-stage2-local-infra-baseline.md  08-stage3-database-and-hudi-baseline.md  09-stage4-auth-and-seed-plan.md  10-local-infra-access-guide.md  11-stage5-business-design-and-api-contract.md  12-monitor-data-excel-template-spec.md  pv-power-forecasting-system-design.md  (+1 more)
scripts/: README.md
(+140 files in other folders)
