[project]
name = "model-service"
version = "0.1.0"
description = "Stage-1 scaffold for model-service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.1.0",
  "orjson>=3.10.0",
  "psycopg[binary]>=3.2.1",
  "scikit-learn>=1.5.0",
  "xgboost>=2.1.1",
  "uvicorn>=0.30.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
